--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
+@import url(https://db.onlinewebfonts.com/c/183bfd7d2bdae47f036aebdb944abaed?family=Code-Pro-Black);
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Heading {
+  font-family: "Code-Pro-Black";
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -14,7 +15,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0f0f0f;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
