--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,24 @@
-@import url(https://db.onlinewebfonts.com/c/183bfd7d2bdae47f036aebdb944abaed?family=Code-Pro-Black);
-
 .App {
   text-align: center;
 }
 
-.Heading {
-  font-family: "Code-Pro-Black";
-}
+.logoImage {
+  width: 400px;
+  margin-bottom: 50px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  /* Small ass devices */
+  @media only screen and (max-width: 399px) {
+    width: 200px;
+  }
+
+  /* Large devices such as laptops (1024px and up) */
+  @media only screen and (min-width: 64em) {
+    width: 600px;
   }
 }
 
 .App-header {
-  background-color: #0f0f0f;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -23,17 +26,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
