--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .logoImage {
-  width: 400px;
+  width: 300px;
   margin-bottom: 50px;
+  margin-top: 20px;
 
   /* Small ass devices */
   @media only screen and (max-width: 399px) {
