--- a/src/components/GigCard.css
+++ b/src/components/GigCard.css
@@ -4,18 +4,25 @@
   border: 2px solid white;
   border-radius: 4px;
   margin-bottom: 50px;
-  width: 450px;
+  width: 350px;
 
   @media only screen and (max-width: 600px) {
-    width: 350px;
+    width: 300px;
   }
 }
 
 .cardText {
   font-family: "Minion Pro", sans-serif;
+  font-size: 20px;
+}
+
+.cardName {
+  font-family: "Minion Pro", sans-serif;
+  font-size: 24px;
 }
 
 .ticketLink {
   color: white;
   font-family: "Minion Pro", sans-serif;
+  font-size: 20px;
 }
