--- a/src/routes/Contact.css
+++ b/src/routes/Contact.css
@@ -3,10 +3,11 @@
 .aboutContainer {
   width: 400px;
   margin-bottom: 10px;
+  word-wrap: break-word;
 
   /* Small ass devices */
   @media only screen and (max-width: 399px) {
-    width: 200px;
+    width: 250px;
   }
 
   /* Large devices such as laptops (1024px and up) */
@@ -17,13 +18,13 @@
 
 .aboutText {
   font-family: "Minion Pro", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   color: white;
 }
 
 .contactTitle {
   font-family: "Minion Pro", sans-serif;
-  font-size: 24px;
+  font-size: 20px;
   color: white;
   font-weight: 600;
   margin-bottom: 5px;
@@ -38,9 +39,14 @@
 
 .contactEmail {
   font-family: "Minion Pro", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   color: white;
   margin: 0;
+}
+
+.emailLink {
+  text-decoration: none;
+  color: white;
 }
 
 .breaker {
