--- a/src/components/GigCard.css
+++ b/src/components/GigCard.css
@@ -5,9 +5,14 @@
   border-radius: 4px;
   margin-bottom: 50px;
   width: 350px;
+  word-wrap: break-word;
 
   @media only screen and (max-width: 600px) {
     width: 300px;
+  }
+
+  @media only screen and (max-width: 450px) {
+    width: 220px;
   }
 }
 
