--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,13 +1,8 @@
 @import url("https://fonts.cdnfonts.com/css/minion-pro");
 
-.navBarLink {
-  font-family: "Minion Pro", sans-serif;
-  color: white;
-  text-decoration: none;
-}
-
 .navBarContainer {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   padding-bottom: 50px;
   width: 200px;
@@ -23,4 +18,28 @@
   @media only screen and (min-width: 1200px) {
     width: 350px;
   }
+}
+
+.navBarLink {
+  font-family: "Minion Pro", sans-serif;
+  color: white;
+  text-decoration: none;
+}
+
+.svgLink {
+  color: white;
+  text-decoration: none;
+}
+
+.routesContainer {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin-bottom: 14px;
+}
+
+.iconsContainer {
+  display: flex;
+  justify-content: space-evenly;
+  box-sizing: border-box;
 }
