--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 50px;
+  margin-top: 50px;
   width: 200px;
 
   @media only screen and (min-width: 500px) {
