--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+  background-color: #000000;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.mainContent {
+  display: flex;
+  flex-direction: column;
 }
 
 .logoImage {
@@ -11,15 +24,4 @@
   @media only screen and (max-width: 399px) {
     width: 200px;
   }
-}
-
-.App-header {
-  background-color: #000000;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
